--- a/config/resources.cfg
+++ b/config/resources.cfg
@@ -1,47 +1,36 @@
-
-###FiveM###
-start mapmanager
-start spawnmanager
-start sessionmanager
-restart sessionmanager
-start fivem
-start GHMattiMySQL
-start vrp
-start chat
-start vrp_ghmattimysql
-start bob74_ipl
+#--=[ SYSTEM ]============================================================--#
+ensure mapmanager
+ensure spawnmanager
+ensure sessionmanager
+ensure fivem
+ensure chat
+ensure bob74_ipl
+ensure fivem-map-hipster
+#--=[ CONECT DB ]=========================================================--#
+ensure vrp_ghmattimysql
+ensure mysql-async
+ensure GHMattiMySQL
+#--=[ VRP ]===============================================================--#
+ensure vrp
+ensure vrp_admin
+ensure vrp_identidade
+ensure vrp_player
+ensure vrp_policia
+ensure vrp_hud
+ensure vrp_compass
+ensure vrp_minimap
+ensure vrp_barbershop
+#--=[ MISC ]==============================================================--#
+ensure xp-character
 ensure minimap
-
-
-#pma-voice
-start pma_voice
+#--=[ VOIP ]============================================--#
 ensure pma_voice
-
-#ensure xp-character
-
-###TELEFONE###
-start gcphone
-start mysql-async
-
-###"VRP"###
-start vrp_admin
-start vrp_identidade
-start vrp_player
-start vrp_policia
-start fivem-map-hipster
-
-
-#HUD
-
-start vrp_hud
-start vrp_compass
-start vrp_minimap
-
-##Carros##
-
-
-
-###EMPREGOS###
-
-
-###"FARDAS E ROUPAS"###
+#--=[ TELEFONE ]============================================--#
+ensure gcphone
+#--=[ EMPREGOS ]==============================================================--#
+#--=[ ADDONS ]===============================================================--#
+#--=[ NAV ]===========================================================--#
+#--=[ ROUBOS ]===============================================================--#
+#--=[ ILEGAL ]============================================--#
+#--=[ CARROS ]============================================--#
+#--=[ ROUPAS ]============================================--#
